--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignInMember.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignInMember.cshtml
@@ -7,7 +7,16 @@
 @model SmokeFreeApplication.Models.GeneralUser
 @using (Html.BeginForm("SignInAsMember", "Account", FormMethod.Post))
 {
-    <h3>Member Sign In</h3>
+    <style>
+        .btnSignIn{
+            margin: 10px;
+        }
+        .btnSignUp{
+            margin:10px;
+        }
+    </style>
+
+    <h4>Member Sign In</h4>
     <div class="form-group-row">
         <div class="col-sm-12">
             <span class="badge badge-danger">@TempData["loginFailed"]</span>
@@ -17,24 +26,24 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.userName)</label>
         <div class="col-sm-10">
-            <p class="form-control-plaintext">
-                @Html.TextBoxFor(m => m.userName, "", new { @class = "form-control", @placeholder = "Username", required = "required" })
-            </p>
+
+            @Html.TextBoxFor(m => m.userName, "", new { @class = "form-control", @placeholder = "Username", required = "required" })
+
         </div>
     </div>
 
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.password)</label>
         <div class="col-sm-10">
-            <p class="form-control-plaintext">
-                @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password", required = "required" })
-            </p>
+
+            @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password", required = "required" })
+
         </div>
     </div>
 
     <div class="form-group row">
-        <input class=" btn btn-primary" type="submit" value="Sign In" />
-        <button class="btn btn-info"> @Html.ActionLink("Sign Up", "SignUpMember", "Account")</button>
+        <input class="btn btn-primary btnSignIn" type="submit" value="Sign In" />
+        <button class="btn btn-secondary btnSignUp"> @Html.ActionLink("Sign Up", "SignUpMember", "Account")</button>
     </div>
 }
 
