Update changes after conflicts

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/CreateStory.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/CreateStory.cshtml
@@ -38,7 +38,7 @@
     <div class="form-group">
         <p>Tags: </p>
         <div>
-            <input name="tagsinput" type="text" value="Amsterdam,Washington,Sydney,Beijing,Cairo" data-role="tagsinput"/>
+            <input name="tagsinput" type="text" data-role="tagsinput"/>
         </div>
     </div>
     <div class="form-group">
