Added controls for pending article and doctor
-Added control for pending article and doctor. Approve,reject,close
-Remove unnesscary files
-Removed userbuilder
Know bug:
-After approving doctor/article, it doesnt get removed from pending list
-Strange display bug where I cannot get rid of "@model something~ " on Admin manage page
-Manage button is used to link to article/doctor control instead of able to clicking on the title itself.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_pendingDoctors.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_pendingDoctors.cshtml
@@ -19,6 +19,7 @@
                     <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
                     <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.contactNo)</h6>
                     <p class="card-text">@Html.DisplayFor(modelItem => item.description)</p>
+                    @Html.ActionLink("Manage", "DoctorManage", "Admin", new SmokeFreeApplication.Controllers.DocQuery(item.doctorID), null)
                 </div>
             </div>
         }
