--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_pendingArticles.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_pendingArticles.cshtml
@@ -4,11 +4,12 @@
 @{
     Layout = "";
     //int n = Model.list1.Count();
-   
+
     IEnumerable<SmokeFreeApplication.Models.Article> articleList = Model.list1;
 }
 
 <div class="list-group">
+    
 
     @foreach (var item in articleList)
     {
@@ -19,11 +20,15 @@
                     <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
                     <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.postDate)</h6>
                     <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                    @Html.ActionLink("Manage", "ArticleManage", "Admin", new SmokeFreeApplication.Controllers.ArticleQuery(item.articleID), null)
                 </div>
             </div>
+        }
         }
 
 
     }
 
 </div>
+
+
