--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/printTest.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Test/printTest.cshtml
@@ -1,15 +1,12 @@
-﻿@model SmokeFreeApplication.Models.DocEntry
+﻿@model SmokeFreeApplication.Models.Doctor
 @{
     ViewBag.Title = "Test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>This is a header</h2>
-<h2>Model name is @Model.bio.name</h2>
-<h2>Model gender is @Model.bio.gender</h2>
-<h2>Model email is @Model.meta.email</h2>
-<h2>Model password is @Model.meta.password</h2>
-<h2>Model Location is @Model.docInfo.workLocation</h2>
+<h2>Model ID is @Model.doctorID</h2>
+
 
 
 
