--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
@@ -14,6 +14,7 @@
                 <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
                 <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.postDate)</h6>
                 <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                @Html.ActionLink("Reply", "CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(item.commentID, "C"), null)
             </div>
         </div>
         if (n > 0)
