--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/createArticle.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model SmokeFreeApplication.Models.Article
+
 @{
     ViewBag.Title = "createArticle";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,19 +7,40 @@
 
 
 
-    <h1>Post an Article</h1>
-    <img src="https://www.freeiconspng.com/thumbs/profile-icon-png/profile-icon-9.png" width="150" height="155" alt="ProfileImage" style="float: left; margin-right: 15px;">
+<h1>Create an Article</h1>
+<img src="https://www.freeiconspng.com/thumbs/profile-icon-png/profile-icon-9.png" width="150" height="155" alt="ProfileImage" style="float: left; margin-right: 15px;">
 
-    <h2>User's Name</h2>
-    <p class="title">Doctor at </p>
-    <p class="title">NUH </p>
-    <p>Specialised in Lungs</p><br>
-    <form action="/action_page.php" method="post" target="_blank">
-        <label for="fname">Article Title:</label>
-        <input type="text" id="fname" name="fname"><br><br>
-        <label for="lname">Last name:</label><br><br>
-        <textarea name="paragraph_text" cols="50" rows="10"></textarea>
-        <input type="submit" value="Submit">
-    </form>
+<h2>Tang Kok Kee</h2>
+<p class="title">Doctor at </p>
+<p class="title">NUH </p>
+<p>Specialised in Lungs</p>
+<br>
 
-    <p>Click on the submit button, and the form will be submittied using the POST method.</p>
+<form>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    <div class="form-group">
+        <p>Article Title: </p>
+        <div class="col-sm-12">
+            @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control" }, style = "width:300px;" })
+            @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <p>Description: </p>
+        <div class="col-sm-12">
+            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control" }, style = "width:100%; height:200px;" })
+            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Create" class="btn btn-default" style = "background-color: #e7e7e7; color: black;"} />
+        </div>
+    </div>
+</form>
+
