--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_approvedArticles.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_approvedArticles.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@model IEnumerable<SmokeFreeApplication.Models.Article>*@
-@Model SmokeFreeApplication.Models.AdminManageDataPacket
+@model SmokeFreeApplication.Models.AdminManageDataPacket
 
 @{
     Layout = "";
