--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_pendingDoctors.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Admin/_pendingDoctors.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@model IEnumerable<SmokeFreeApplication.Models.Doctor>*@
-@Model SmokeFreeApplication.Models.AdminManageDataPacket
+@model SmokeFreeApplication.Models.AdminManageDataPacket
 
 @{
     Layout = "";
@@ -19,7 +19,7 @@
                     <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
                     <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.contactNo)</h6>
                     <p class="card-text">@Html.DisplayFor(modelItem => item.description)</p>
-                    @Html.ActionLink("Manage", "DoctorManage", "Admin", new SmokeFreeApplication.Controllers.DocQuery(item.doctorID), null)
+                    @Html.ActionLink("Manage", "DoctorManage", "Admin", new SmokeFreeApplication.Controllers.DocQuery(item.userName), null)
                 </div>
             </div>
         }
