--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/Articles.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/Articles.cshtml
@@ -37,7 +37,7 @@
             <div class="card-footer">
 
                 @*Edit this to link to view a single article page*@
-                <a href="@Url.Action("ViewArticle", "Article", new { id = item.storyID})" style="text-decoration: none;">Read More</a>
+                <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">Read More</a>
                 <a href="#" class="card-link">Share</a>
             </div>
         </a>
