--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpMember.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpMember.cshtml
@@ -3,8 +3,8 @@
     Layout = "~/Views/Account/_SignUpLayout.cshtml";
 }
 
-@model SmokeFreeApplication.Models.GeneralUser
-@using (Html.BeginForm("SignUpAsMember", "Account", FormMethod.Post, new {enctype="multipart/form-data" }))
+@model SmokeFreeApplication.Models.InterestedPartyCompoundModel
+@using (Html.BeginForm("SignUpAsMember", "Account", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <style>
         .btnSignUp {
@@ -13,10 +13,10 @@
     </style>
     <h4>Member Sign Up</h4>
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.userName)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.userName)</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.userName, "", new { @class = "form-control", @placeholder = "Username" })
-            @Html.ValidationMessageFor(m => m.userName, "", new { @class = "badge badge-danger" })
+            @Html.TextBoxFor(m => m.GeneralUsers.userName, "", new { @class = "form-control", @placeholder = "Username" })
+            @Html.ValidationMessageFor(m => m.GeneralUsers.userName, "", new { @class = "badge badge-danger" })
             @if (ViewData["UsernameExists"] != null)
             {
                 <span class="badge badge-danger">@ViewData["UsernameExists"]</span>
@@ -25,34 +25,34 @@
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.password)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.password)</label>
         <div class="col-sm-10">
-            @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password" })
-            @Html.ValidationMessageFor(m => m.password, "", new { @class = "badge badge-danger" })
+            @Html.PasswordFor(m => m.GeneralUsers.password, new { @class = "form-control", @placeholder = "Password" })
+            @Html.ValidationMessageFor(m => m.GeneralUsers.password, "", new { @class = "badge badge-danger" })
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.confirmPassword)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.confirmPassword)</label>
         <div class="col-sm-10">
-            @Html.PasswordFor(m => m.confirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
-            @Html.ValidationMessageFor(m => m.confirmPassword, "", new { @class = "badge badge-danger" })
+            @Html.PasswordFor(m => m.GeneralUsers.confirmPassword, new { @class = "form-control", @placeholder = "Confirm Password" })
+            @Html.ValidationMessageFor(m => m.GeneralUsers.confirmPassword, "", new { @class = "badge badge-danger" })
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.name)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.name)</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.name, "", new { @class = "form-control", @placeholder = "name" })
-            @Html.ValidationMessageFor(m => m.name, "", new { @class = "badge badge-danger" })
+            @Html.TextBoxFor(m => m.GeneralUsers.name, "", new { @class = "form-control", @placeholder = "name" })
+            @Html.ValidationMessageFor(m => m.GeneralUsers.name, "", new { @class = "badge badge-danger" })
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.email)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.email)</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.email, "", new { @class = "form-control", @placeholder = "abc@gmail.com" })
-            @Html.ValidationMessageFor(m => m.email, "", new { @class = "badge badge-danger" })
+            @Html.TextBoxFor(m => m.GeneralUsers.email, "", new { @class = "form-control", @placeholder = "abc@gmail.com" })
+            @Html.ValidationMessageFor(m => m.GeneralUsers.email, "", new { @class = "badge badge-danger" })
             @if (ViewData["EmailExists"] != null)
             {
                 <span class="badge badge-danger">@ViewData["EmailExists"]</span>
@@ -61,31 +61,45 @@
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.dateOfBirth)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.dateOfBirth)</label>
         <div class="col-sm-10">
-            @Html.TextBoxFor(m => m.dateOfBirth, new { @class = "form-control", @type = "date" })
-            @Html.ValidationMessageFor(m => m.dateOfBirth, "", new { @class = "badge badge-danger" })
+            @Html.TextBoxFor(m => m.GeneralUsers.dateOfBirth, new { @class = "form-control", @type = "date" })
+            @Html.ValidationMessageFor(m => m.GeneralUsers.dateOfBirth, "", new { @class = "badge badge-danger" })
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.gender)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.gender)</label>
         <div class="col-sm-10">
-            @Html.RadioButtonFor(m => m.gender, "Male", new { required = "required" })
+            @Html.RadioButtonFor(m => m.GeneralUsers.gender, "Male", new { required = "required" })
             Male
 
-            @Html.RadioButtonFor(m => m.gender, "Female", new { required = "required" })
+            @Html.RadioButtonFor(m => m.GeneralUsers.gender, "Female", new { required = "required" })
             Female
 
-            @Html.RadioButtonFor(m => m.gender, "Others", new { required = "required" })
+            @Html.RadioButtonFor(m => m.GeneralUsers.gender, "Others", new { required = "required" })
             Prefer not to say
         </div>
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.profilePicture)</label>
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.InterestedParties.smokerOrNot)</label>
+        <div class="col-sm-10">
+            @Html.RadioButtonFor(m => m.InterestedParties.smokerOrNot, true, new { required = "required" })
+            Yes
+
+            @Html.RadioButtonFor(m => m.InterestedParties.smokerOrNot, false, new { required = "required" })
+            No
+
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">@Html.LabelFor(m => m.GeneralUsers.profilePicture)</label>
         <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
     </div>
+    @Html.HiddenFor(m => m.InterestedParties.bio, new { @Value = "" })
+    @Html.HiddenFor(m => m.InterestedParties.userName, new { @Value = "AAAAAAA" })
 
     <div class="form-group row">
         <input class="btn btn-primary btnSignUp" type="submit" value="Sign Up" />
