comment box display on ViewStory
changes to display the create comment box on ViewStory

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/ViewStory.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/ViewStory.cshtml
@@ -15,9 +15,9 @@
     <p>@Html.DisplayFor(model => model.body)</p>
 </div>
 
-<button type="button" class="btn btn-secondary">
-    @Html.ActionLink("Post a comment", "CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.storyID, "S"), null)
-</button>
+<div>
+    @Html.Action("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.storyID, "S"))
+</div>
 
 <div class="jumbotron">
     @Html.Action("ViewComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.storyID, "S"))
