--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
@@ -1,8 +1,7 @@
 ﻿@model SmokeFreeApplication.Models.Comment
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "";
 }
 
 @using (Html.BeginForm())
@@ -10,7 +9,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Post comment</h4>
+        <h4>Comments</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
