Update on Article and Doctor Profile

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/createArticle.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SmokeFreeApplication.Models.Article
 
 @{
-    ViewBag.Title = "createArticle";
+    ViewBag.Title = "CreateArticle";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
