--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/ViewArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/ViewArticle.cshtml
@@ -9,24 +9,25 @@
     @Html.ActionLink("Back to List", "Articles")
 </p>
 
-<<<<<<< HEAD
+@*<<<<<<< HEAD
 =======
 @*Modify this section to display other things like pictures*@
->>>>>>> 96023bd91467fe1da0c3c1d8f160597abeb986c6
+@*>>>>>>> 96023bd91467fe1da0c3c1d8f160597abeb986c6*@
 <div class="mx-auto" style="width: 70rem;">
     <h3> @Html.DisplayFor(model => model.title)</h3>
     <p class="font-weight-light">@Html.DisplayFor(model => model.postDate)</p>
     <p class="font-weight-light">@Html.DisplayFor(model => model.userName)</p>
     <p>@Html.DisplayFor(model => model.body)</p>
+    @foreach (var tag in ViewBag.tagList)
+    {
+        <span class="badge badge-dark"> @Html.Raw(tag) </span>
+    }
 </div>
-<<<<<<< HEAD
-=======
 
-<button type="button" class="btn btn-secondary">
-    @Html.ActionLink("Post a comment", "CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.articleID, "A"), null)
-</button>
+<div>
+    @Html.Action("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.storyID, "S"))
+</div>
 
 <div class="jumbotron">
-    @Html.Action("ViewComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.articleID, "A"))
+    @Html.Action("ViewComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(Model.storyID, "S"))
 </div>
->>>>>>> 96023bd91467fe1da0c3c1d8f160597abeb986c6
