--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
@@ -3,28 +3,26 @@
 <link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "My Doctor Profile";
+    ViewBag.Title = "DrProfile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Doctor Profile</h2>
 
-@*<img src="@Url.Action("retrieveUserPic", "Article", new { username = item.userName })" width="155" height="165" style="float: left; margin-right: 15px;">*@
+<img src="@Url.Action("retrieveUserPic", "Article", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
 
 
 <h1>Bio</h1>
 <p class="title">Doctor at </p>
 <p class="title">NUH </p>
 <p>Specialised in Lungs</p>
-
+<p>
+    @Html.ActionLink("Create Article", "CreateArticle")
+</p>
 @foreach (var item in Model)
 {
     <div class="card" style="width: 70rem;">
         <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">
-            @*Edit this to link to view a single article page*@
-
-
             <div class="card-header">
-                @*Implement retrieveUserPic or borrow from ray again*@
                 <img src="@Url.Action("retrieveUserPic", "Article", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
                 <div style="height:5rem; padding-top:30px; padding-left:100px;">
                     <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
@@ -33,11 +31,9 @@
             </div>
             <div class="card-body">
                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-                <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                <p class="card-text">@Html.Raw(item.body)</p>
             </div>
             <div class="card-footer">
-
-                @*Edit this to link to view a single article page*@
                 <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">Read More</a>
                 <a href="#" class="card-link">Share</a>
             </div>
@@ -48,6 +44,13 @@
     <br />
 
 }
+<!---linking pager to search display-->
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
-@Html.PagedListPager(Model, page => Url.Action("Articles", new { page }))
+@Html.PagedListPager(Model, page => Url.Action("Articles", new { page, option = ViewBag.option, search = ViewBag.search }))
+
+<!--Search script-->
+@section Scripts
+{
+    <script type="text/javascript" src="~/Scripts/search.js"></script>
+}
 
