--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Doctor/DrProfile.cshtml
@@ -16,7 +16,7 @@
 <p class="title">NUH </p>
 <p>Specialised in Lungs</p>
 <p>
-    @Html.ActionLink("Create Article", "CreateArticle")
+    @Html.ActionLink("Create Article", "createArticle")
 </p>
 @foreach (var item in Model)
 {
