--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Story/Stories.cshtml
@@ -41,7 +41,7 @@
             </div>
             <div class="card-body">
                 <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-                <p class="card-text">@Html.Raw(item.body)</p>
+                <div class="card-text">@Html.Raw(item.body)</div>
             </div>
             <div class="card-footer">
                 <a href="@Url.Action("ViewStory", "Story", new { id = item.storyID})" style="text-decoration: none;">Read More</a>
